[package]
name = "starklane_indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
alloy-primitives = { git = "https://github.com/alloy-rs/core/", default-features = false }
async-trait = "0.1.68"
futures = "0.3.28"
mongodb = "2.6.0"
reqwest = { version = "0.11.14", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
starknet = "0.5.0"
tokio = { version = "1", features = ["full"] }
url = "2.3.1"
clap = { version = "4.3.19", features = ["derive", "env", "string"] }
regex = "1.9.1"
