[package]
name = "starklane_indexer"
version = "0.1.0"
edition = "2021"

build = "src/build.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.6.20", features = ["macros"] }
ethers = "2.0.8"
async-trait = "0.1.68"
futures = "0.3.28"
mongodb = "2.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
starknet = "0.5.0"
tokio = { version = "1", features = ["full"] }
url = "2.3.1"
clap = { version = "4.3.19", features = ["derive", "env", "string"] }
regex = "1.9.1"
env_logger = "0.10.0"
log = "0.4.17"
num-bigint = "0.4.4"
config = { version = "0.14.0", features = ["json"] }
sha3 = "0.10.8"
reqwest = { version = "0.12.3", default-features=false, features = ["json", "rustls-tls"] }
