[package]
name = "refund"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0"
clap = { version = "4.3.19", features = ["derive", "env", "string"] }
csv = "1.3.0"
env_logger = "0.10.0"
log = "0.4.17"
futures = "0.3.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

starklane_indexer = { version = "0.1.0", path= ".."}
starknet = "0.10.0"
